# CLAfICLe

./: .gitignore  README.md  gen_pip_reqs.sh  pyproject.toml  requirements.txt  test_gpt2_mem.py
claficle/conf/: debug_eval.yaml  distil.yaml  eval.yaml  gen_teacher_labels.yaml  run.yaml  setup_data.yaml  train.yaml  tune.yaml  wechsel_init.yaml
claficle/conf/benchmark/: debug.yaml  eval.yaml
claficle/conf/data/: benchmark.yaml  debug_benchmark.yaml  defaults.yaml  oscar.yaml  oscar_base.yaml
claficle/conf/model/: base_gewechselt.yaml  base_gpt2.yaml  base_model.yaml  debug.yaml  gewechselt.yaml  metaicl.yaml  metaicl_vessel.yaml  metaiclva.yaml  sandwhich.yaml  sandwich.yaml  vessel.yaml
claficle/conf/trainer/: debug.yaml  defaults.yaml  eval.yaml  train.yaml  tune.yaml  wechsel_init.yaml
claficle/data/: benchmark.py  oscar.py  utils.py
claficle/data/process/: __init__.py  amazon.py  hatecheck.py  swissjudge.py  utils.py  winox.py  xcsr.py  xglue.py
claficle/models/: __init__.py  base.py  evalwrapper.py  gewechselt.py  plain_gpt2.py  sandwhich.py  sandwich.py  utils.py  vessel.py  wrapper.py
claficle/run/: checkpoints.py  distil.py  eval.py  gen_teacher_labels.py  train.py  tune.py  wechsel_init.py
claficle/utils/: general.py
data/: README.md
data/raw/: monolingual_datasets.csv  nat_inst_tasks.csv
models/: sandwhich.py
notebooks/: monolingual_datasets.ipynb  nat_inst.ipynb  perplexity.ipynb  results.ipynb  sandbox.ipynb  tokens_per_gb.ipynb
reports/: experiment_notes.md  helpful.md
reports/figures/: claficle.drawio
reports/report/: custom.bib  main.tex
slurm/: .secrets-template  env.job
slurm/data/: data.array.job  data.job  process.array.job  process.array.txt  process.single.job
slurm/data/benchmark/: process.array.job  process.array.txt  process.single.de.job  process.single.en.job  process.single.fr.job  process.single.job
slurm/data/oscar/: download.array.job  setup.array.job  setup.array.txt  setup.single.job
slurm/distil/metaicl/: clm.array.job  clm.single.job
slurm/eval/: benchmark.array.job  benchmark.array.txt  debug_sandwich.job  sandwhich.job  sandwich.array.job  sandwich.array.txt  sandwich.single.job
slurm/sandwich/: debug_eval.job  eval.job
slurm/teacher_labels/: generate.array.job  generate.array.txt  generate.single.job
slurm/train/gewechselt/: clm.array.job  clm.array.txt  clm.single.job  debug.single.job
slurm/tune/: manual_memory.job  memory.job  time.job
slurm/wechsel_init/: init.array.job  init.array.txt
xlaicl/: unit_tests.py
xlaicl/conf/: eval.py  test.yaml  unit_test.yaml
xlaicl/conf/benchmark/: eval.yaml
xlaicl/data/: benchmark.py
xlaicl/models/: sandwhich.py  wrapper.py
xlaicl/run/: eval.py  test.py
(+14 files in other folders)
