[tool.poetry]
name = "claficle"
version = "0.1.0"
description = "Cross-lingual adaptation for In Context Learning"
authors = ["Giulio Starace <giulio.starace@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.5"
transformers = "^4.21.1"
pytorch-lightning = "~1.7.0"
hydra-core = "^1.2.0"
torch = "~1.12.1"
googletrans = "3.1.0a0"
termcolor = "^2.1.0"
tensorboard = "^2.11.0"
pybind11 = "^2.10.1"
wechsel = "^0.0.3"
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.3"
black = "^22.6.0"
flake8 = "^4.0.1"
jupyterlab-code-formatter = "^1.4.11"
ipykernel = "^6.15.0"
nbdime = "^3.1.1"
ipywidgets = "^7.7.1"
types-PyYAML = "^6.0.11"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportPrivateImportUsage = false
